feat: 新增優惠券功能、CartCleanup、Skills 與 README 更新
- 優惠券功能：CouponService、CheckoutRequest、OrderSummary 完整實作
- CartCleanupService：定期清理過期購物車
- 新增 Skills：frontend-design、webapp-testing
- PostToolUse hook：scripts/post-edit-test.js
- E2E demo-video spec
- README：技術棧加入 CI/CD & 部署（Render Docker/Static Site/PostgreSQL）
- CLAUDE.md、spec.md、todolist.md 同步更新

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>